<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto" >

    <PreferenceCategory app:title="@string/settings_display">

        <EditTextPreference
            app:key="display_scale"
            app:title="@string/display_scale"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            app:key="allowmultiple"
            app:title="@string/allow_multiple_notebooks" />

        <SwitchPreference
            app:key="sorttype"
            app:title="@string/display_sort_type"
            app:summaryOff="@string/display_sort_bytitle"
            app:summaryOn="@string/display_sort_bydate"/>


        <EditTextPreference
            app:key="color_title"
            app:title="@string/display_color_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="color_text"
            app:title="@string/display_color_text"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="color_background"
            app:title="@string/display_color_background"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="color_highlight"
            app:title="@string/display_color_highlight"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_sync">

        <SwitchPreference
            app:key="sync_auto"
            app:title="@string/sync_auto" />

        <EditTextPreference
            app:dependency="sync_auto"
            app:key="sync_period"
            app:title="@string/sync_period"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="sync_conflict"
            app:title="@string/sync_conflict"
            app:summary="@string/menu_about"
            app:entries="@array/sync_conflict_names"
            app:entryValues="@array/sync_conflict_values"
            app:useSimpleSummaryProvider="true"
            />


        <SwitchPreference
            app:key="sync_file_switch"
            app:title="@string/sync_file" />

        <EditTextPreference
            app:dependency="sync_file_switch"
            app:key="sync_file"
            app:title="@string/sync_location"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:key="sync_nc_switch"
            app:summary="@string/sync_nc_summary"
            app:title="@string/sync_nc" />

        <EditTextPreference
            app:dependency="sync_nc_switch"
            app:key="sync_nc"
            app:title="@string/sync_url"
            />
    </PreferenceCategory>

</PreferenceScreen>